--- a/lightyear_crossbeam/Cargo.toml
+++ b/lightyear_crossbeam/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "lightyear_sync"
+name = "lightyear_crossbeam"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
@@ -10,32 +10,21 @@ repository = "https://github.com/cBournhonesque/lightyear"
 
 [features]
 default = ["std"]
-client = []
-server = []
 std = [
-    "bevy/std",
-    "bytes/std",
-    "serde/std",
 ]
-interpolation = []
 
 [dependencies]
-lightyear_utils.workspace = true
-lightyear_serde.workspace = true
-lightyear_core.workspace = true
 lightyear_link.workspace = true
-lightyear_messages.workspace = true
-lightyear_transport.workspace = true
-
-# utils
-tracing.workspace = true
-
-# serde
-serde.workspace = true
-bytes.workspace = true
 
 # bevy
 bevy.workspace = true
+
+# utils
+crossbeam-channel.workspace = true
+tracing.workspace = true
+
+# serde
+bytes.workspace = true
 
 [lints]
 workspace = true
