wip bevy stepper

--- a/lightyear_client/Cargo.toml
+++ b/lightyear_client/Cargo.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/cBournhonesque/lightyear"
 
 [features]
 default = [
+    "interpolation",
     "std",
 ]
 std = [
@@ -17,7 +18,9 @@ std = [
     "bytes/std",
     "serde/std",
 ]
-
+interpolation = [
+    "lightyear_sync/interpolation",
+]
 prediction = []
 
 # connection
