--- a/lightyear_netcode/Cargo.toml
+++ b/lightyear_netcode/Cargo.toml
@@ -18,8 +18,8 @@ std = [
       "bytes/std",
       "chacha20poly1305/std",
 ]
-client = []
-server = []
+client = ["lightyear_connection/client"]
+server = ["lightyear_connection/server"]
 
 [dependencies]
 # local crates
