--- a/lightyear_tests/Cargo.toml
+++ b/lightyear_tests/Cargo.toml
@@ -29,6 +29,7 @@ lightyear_transport.workspace = true
 lightyear_core.workspace = true
 lightyear_client = { workspace = true, features = ["crossbeam"] }
 lightyear_server = { workspace = true, features = ["crossbeam"] }
+lightyear_netcode = { workspace = true, features = ["client", "server"] }
 lightyear_messages.workspace = true
 lightyear_crossbeam.workspace = true
 lightyear_connection = { workspace = true, features = ["client", "server"]}
@@ -44,6 +45,9 @@ bytes.workspace = true
 
 # bevy
 bevy.workspace = true
+
+[dev-dependencies]
+test-log.workspace = true
 
 [lints]
 workspace = true
