--- a/lightyear_webtransport/Cargo.toml
+++ b/lightyear_webtransport/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "lightyear_udp"
+name = "lightyear_webtransport"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
