--- a/lightyear_shared/Cargo.toml
+++ b/lightyear_shared/Cargo.toml
@@ -24,11 +24,13 @@ udp = ["dep:lightyear_udp"]
 lightyear_utils.workspace = true
 lightyear_serde.workspace = true
 lightyear_core.workspace = true
+lightyear_connection.workspace = true
 lightyear_messages.workspace = true
 lightyear_transport.workspace = true
 lightyear_crossbeam = {workspace = true, optional = true }
 lightyear_udp = {workspace = true, optional = true }
 lightyear_steam = {workspace = true, optional= true}
+lightyear_sync.workspace = true
 
 # utils
 tracing.workspace = true
