--- a/lightyear_tests/Cargo.toml
+++ b/lightyear_tests/Cargo.toml
@@ -17,6 +17,10 @@ std = [
     "bevy/std",
     "bytes/std",
     "serde/std",
+    "lightyear_sync/std",
+    "lightyear_messages/std",
+    "lightyear_serde/std",
+    "lightyear_transport/std",
 ]
 
 
