--- a/lightyear_link/Cargo.toml
+++ b/lightyear_link/Cargo.toml
@@ -16,6 +16,8 @@ std = [
     "serde/std",
 ]
 
+test_utils = []
+
 [dependencies]
 lightyear_utils.workspace = true
 lightyear_serde.workspace = true
