--- a/lightyear_shared/Cargo.toml
+++ b/lightyear_shared/Cargo.toml
@@ -27,6 +27,7 @@ lightyear_core.workspace = true
 lightyear_connection.workspace = true
 lightyear_messages.workspace = true
 lightyear_transport.workspace = true
+lightyear_replication.workspace = true
 lightyear_crossbeam = {workspace = true, optional = true }
 lightyear_udp = {workspace = true, optional = true }
 lightyear_steam = {workspace = true, optional= true}
