--- a/lightyear_replication/Cargo.toml
+++ b/lightyear_replication/Cargo.toml
@@ -14,6 +14,12 @@ std = [
     "bevy/std",
     "bytes/std",
     "serde/std",
+    "lightyear_connection/std",
+    "lightyear_transport/std",
+    "lightyear_messages/std",
+    "lightyear_serde/std",
+    "lightyear_utils/std",
+    "lightyear_core/std",
 ]
 
 [dependencies]
@@ -27,6 +33,7 @@ lightyear_transport.workspace = true
 # utils
 crossbeam-channel.workspace = true
 hashbrown.workspace = true
+smallvec.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
 
