--- a/lightyear_prediction/Cargo.toml
+++ b/lightyear_prediction/Cargo.toml
@@ -20,8 +20,11 @@ std = [
 lightyear_utils.workspace = true
 lightyear_serde.workspace = true
 lightyear_core.workspace = true
+lightyear_replication.workspace = true
+lightyear_sync.workspace = true
 
 # utils
+parking_lot.workspace = true
 tracing.workspace = true
 
 # serde
