--- a/examples/common/Cargo.toml
+++ b/examples/common/Cargo.toml
@@ -57,7 +57,8 @@ clap.workspace = true
 crossbeam-channel.workspace = true
 rand.workspace = true
 serde.workspace = true
-bevy = { workspace = true, features = ["bevy_log"]}
+bevy.workspace = true
+#bevy = { workspace = true, features = ["bevy_log"]}
 bevygap_client_plugin = { workspace = true, optional = true }
 bevygap_server_plugin = { workspace = true, optional = true }
 bevy-inspector-egui = { workspace = true, optional = true }
