--- a/lightyear_inputs/Cargo.toml
+++ b/lightyear_inputs/Cargo.toml
@@ -14,12 +14,17 @@ std = [
     "bevy/std",
     "bytes/std",
     "serde/std",
+    "lightyear_sync/std"
 ]
+client = ["lightyear_sync/client"]
+server = ["lightyear_sync/server"]
+
 
 [dependencies]
 lightyear_utils.workspace = true
 lightyear_serde.workspace = true
 lightyear_core.workspace = true
+lightyear_sync.workspace = true
 
 # utils
 tracing.workspace = true
