--- a/lightyear_prediction/Cargo.toml
+++ b/lightyear_prediction/Cargo.toml
@@ -19,6 +19,7 @@ std = [
 [dependencies]
 lightyear_utils.workspace = true
 lightyear_serde.workspace = true
+lightyear_connection = {workspace = true, features = ["client"]}
 lightyear_core.workspace = true
 lightyear_replication.workspace = true
 lightyear_sync.workspace = true
