--- a/lightyear_inputs/Cargo.toml
+++ b/lightyear_inputs/Cargo.toml
@@ -12,26 +12,30 @@ repository = "https://github.com/cBournhonesque/lightyear"
 default = ["std"]
 std = [
     "bevy/std",
-    "bytes/std",
     "serde/std",
     "lightyear_sync/std"
 ]
-client = ["lightyear_sync/client"]
-server = ["lightyear_sync/server"]
+client = [
+    "lightyear_connection/client",
+    "lightyear_sync/client"
+]
+server = [
+    "lightyear_connection/server",
+    "lightyear_sync/server"
+]
 
 
 [dependencies]
-lightyear_utils.workspace = true
-lightyear_serde.workspace = true
+lightyear_connection.workspace = true
 lightyear_core.workspace = true
 lightyear_sync.workspace = true
+lightyear_messages.workspace = true
 
 # utils
 tracing.workspace = true
 
 # serde
 serde.workspace = true
-bytes.workspace = true
 
 # bevy
 bevy.workspace = true
