--- a/lightyear_inputs_native/Cargo.toml
+++ b/lightyear_inputs_native/Cargo.toml
@@ -15,11 +15,23 @@ std = [
     "bytes/std",
     "serde/std",
 ]
+client = [
+    "lightyear_inputs/client"
+]
+server = [
+    "lightyear_inputs/server"
+]
 
 [dependencies]
 lightyear_utils.workspace = true
 lightyear_serde.workspace = true
+lightyear_connection.workspace = true
 lightyear_core.workspace = true
+lightyear_inputs.workspace = true
+lightyear_sync.workspace = true
+lightyear_messages.workspace = true
+lightyear_transport.workspace = true
+lightyear_prediction.workspace = true
 
 # utils
 tracing.workspace = true
