--- a/examples/simple_box_new/Cargo.toml
+++ b/examples/simple_box_new/Cargo.toml
@@ -47,7 +47,7 @@ udp = [
 #visualizer = ["lightyear_examples_common/visualizer", "gui"]
 
 [dependencies]
-lightyear_new.workspace = true
+lightyear_new = { "workspace" = true, features = ["input_native"]}
 lightyear_examples_common_new.workspace = true
 serde.workspace = true
 anyhow.workspace = true
