fix prediction/input for example

--- a/lightyear_prediction/Cargo.toml
+++ b/lightyear_prediction/Cargo.toml
@@ -25,6 +25,7 @@ lightyear_replication.workspace = true
 lightyear_sync.workspace = true
 
 # utils
+seahash.workspace = true
 parking_lot.workspace = true
 tracing.workspace = true
 
