--- a/lightyear_replication/Cargo.toml
+++ b/lightyear_replication/Cargo.toml
@@ -27,6 +27,8 @@ client = [
 server = [
     "lightyear_connection/server",
 ]
+prediction = []
+interpolation = []
 
 [dependencies]
 lightyear_utils.workspace = true
