--- a/lightyear_interpolation/Cargo.toml
+++ b/lightyear_interpolation/Cargo.toml
@@ -20,7 +20,7 @@ std = [
 lightyear_utils.workspace = true
 lightyear_serde.workspace = true
 lightyear_core.workspace = true
-lightyear_replication.workspace = true
+lightyear_replication = {workspace = true, features = ["interpolation"]}
 
 # utils
 tracing.workspace = true
