--- a/lightyear_prediction/Cargo.toml
+++ b/lightyear_prediction/Cargo.toml
@@ -21,7 +21,7 @@ lightyear_utils.workspace = true
 lightyear_serde.workspace = true
 lightyear_connection = {workspace = true, features = ["client"]}
 lightyear_core.workspace = true
-lightyear_replication.workspace = true
+lightyear_replication = {workspace = true, features = ["prediction", "interpolation"]}
 lightyear_sync.workspace = true
 
 # utils
