add unit tests for input_native

--- a/lightyear_tests/Cargo.toml
+++ b/lightyear_tests/Cargo.toml
@@ -25,7 +25,9 @@ std = [
 
 
 [dependencies]
-lightyear_new = { workspace = true, features = ["client", "server", "crossbeam", "netcode"]}
+lightyear_new = { workspace = true, features = [
+    "client", "server", "crossbeam", "netcode", "input_native"
+]}
 lightyear_macros.workspace = true
 lightyear_utils.workspace = true
 lightyear_serde.workspace = true
