--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
   "lightyear_new",
   "lightyear_core",
   "lightyear_crossbeam",
+  "lightyear_fixed_update_interpolation",
   "lightyear_inputs",
   "lightyear_inputs_leafwing",
   "lightyear_inputs_native",
@@ -69,6 +70,7 @@ lightyear_netcode = { path = "./lightyear_netcode", version = "0.19.0", default-
 lightyear_connection = { path = "./lightyear_connection", version = "0.19.0", default-features = false }
 lightyear_core = { path = "./lightyear_core", version = "0.19.0", default-features = false }
 lightyear_crossbeam = { path = "./lightyear_crossbeam", version = "0.19.0", default-features = false }
+lightyear_fixed_update_interpolation = { path = "./lightyear_fixed_update_interpolation", version = "0.19.0", default-features = false }
 lightyear_inputs = { path = "./lightyear_inputs", version = "0.19.0", default-features = false }
 lightyear_inputs_leafwing = { path = "./lightyear_inputs_leafwing", version = "0.19.0", default-features = false }
 lightyear_inputs_native = { path = "./lightyear_inputs_native", version = "0.19.0", default-features = false }
