--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 resolver = "2"
 members = [
   "lightyear",
-  "lightyear_new",
+    "lightyear",
   "lightyear_core",
   "lightyear_crossbeam",
   "lightyear_fixed_update_interpolation",
@@ -76,7 +76,7 @@ lightyear_inputs_leafwing = { path = "./lightyear_inputs_leafwing", version = "0
 lightyear_inputs_native = { path = "./lightyear_inputs_native", version = "0.19.0", default-features = false }
 lightyear_interpolation = { path = "./lightyear_interpolation", version = "0.19.0", default-features = false }
 lightyear_messages = { path = "./lightyear_messages", version = "0.19.0", default-features = false }
-lightyear_new = { path = "./lightyear_new", version = "0.19.0", default-features = false }
+lightyear = { path = "lightyear", version = "0.19.0", default-features = false }
 lightyear_transport = { path = "lightyear_transport", version = "0.19.0", default-features = false }
 lightyear_prediction = { path = "./lightyear_prediction", version = "0.19.0", default-features = false }
 lightyear_link = { path = "./lightyear_link", version = "0.19.0", default-features = false }
