--- a/lightyear_sync/Cargo.toml
+++ b/lightyear_sync/Cargo.toml
@@ -34,6 +34,7 @@ lightyear_transport.workspace = true
 
 # utils
 tracing.workspace = true
+parking_lot.workspace = true
 
 # serde
 serde.workspace = true
