--- a/lightyear_replication/Cargo.toml
+++ b/lightyear_replication/Cargo.toml
@@ -23,9 +23,13 @@ std = [
 ]
 client = [
     "lightyear_connection/client",
+    "lightyear_messages/client",
+    "lightyear_transport/client"
 ]
 server = [
     "lightyear_connection/server",
+    "lightyear_messages/server",
+    "lightyear_transport/server"
 ]
 prediction = []
 interpolation = []
