--- a/lightyear_sync/Cargo.toml
+++ b/lightyear_sync/Cargo.toml
@@ -11,10 +11,14 @@ repository = "https://github.com/cBournhonesque/lightyear"
 [features]
 default = ["std"]
 client = [
-    "lightyear_connection/client"
+    "lightyear_connection/client",
+    "lightyear_messages/client",
+    "lightyear_transport/client"
 ]
 server = [
-    "lightyear_connection/server"
+    "lightyear_connection/server",
+    "lightyear_messages/server",
+    "lightyear_transport/server"
 ]
 std = [
     "bevy/std",
