--- a/lightyear_tests/Cargo.toml
+++ b/lightyear_tests/Cargo.toml
@@ -31,14 +31,14 @@ lightyear = { workspace = true, features = [
 lightyear_macros.workspace = true
 lightyear_utils.workspace = true
 lightyear_serde.workspace = true
-lightyear_transport.workspace = true
+lightyear_transport = { workspace = true, features = ["client", "server"] }
 lightyear_core.workspace = true
 lightyear_netcode = { workspace = true, features = ["client", "server", "test_utils"] }
-lightyear_messages.workspace = true
+lightyear_messages = { workspace = true, features = ["client", "server"] }
 lightyear_replication =  { workspace = true, features = ["client", "server"]}
 lightyear_crossbeam.workspace = true
 lightyear_connection = { workspace = true, features = ["client", "server"]}
-lightyear_sync.workspace = true
+lightyear_sync = { workspace = true, features = ["client", "server"] }
 
 # utils
 cfg-if.workspace = true
