example compiles with interpolation

--- a/examples/common_new/Cargo.toml
+++ b/examples/common_new/Cargo.toml
@@ -47,6 +47,7 @@ gui = [
 
 [dependencies]
 lightyear = {"workspace" = true, features = [
+  "interpolation",
   "prediction",
   "replication",
 ]}
