--- a/lightyear_interpolation/Cargo.toml
+++ b/lightyear_interpolation/Cargo.toml
@@ -20,6 +20,8 @@ std = [
 lightyear_utils.workspace = true
 lightyear_serde.workspace = true
 lightyear_core.workspace = true
+lightyear_connection.workspace = true
+lightyear_messages = {workspace = true, features = ["client"]}
 lightyear_replication = {workspace = true, features = ["interpolation"]}
 lightyear_sync = {workspace = true, features = ["interpolation"]}
 
