--- a/Cargo.toml
+++ b/Cargo.toml
@@ -221,7 +221,7 @@ approx = "0.5.1"
 
 # Bevy
 # (we add back features needed for gui clients if desired)
-bevy = { version = "0.16.0-rc.5", default-features = false, features = [
+bevy = { version = "0.16", default-features = false, features = [
   "bevy_state",
   "bevy_log",
   "serialize",
@@ -244,19 +244,19 @@ avian3d = { version = "=0.2.0", default-features = false }
 
 
 # gui debug ui
-bevy-inspector-egui = { version = "0.29", default-features = false, features = [
+bevy-inspector-egui = { version = "0.31", default-features = false, features = [
   "bevy_pbr",
   "bevy_image",
   "bevy_render",
   "egui_open_url",
 ] }
-bevy_egui = { version = "0.32", default-features = false, features = [
+bevy_egui = { version = "0.34", default-features = false, features = [
   "open_url",
   "default_fonts",
   "render",
 ] }
-bevy_metrics_dashboard = "0.4"
-egui_extras = "0.30"
+bevy_metrics_dashboard = "0.6"
+egui_extras = "0.31"
 
 # bevygap for deploying on Edgegap
 bevygap_server_plugin = { version = "0.3.1" }
