--- a/examples/common/Cargo.toml
+++ b/examples/common/Cargo.toml
@@ -42,6 +42,7 @@ gui = [
   "bevy/webgl2",
   "bevy/bevy_winit",
   "bevy/bevy_picking",
+  "bevy/bevy_ui_picking_backend",
   "bevy/bevy_sprite",
   "bevy/bevy_text",
   "bevy/bevy_ui",
