--- a/lightyear_replication/Cargo.toml
+++ b/lightyear_replication/Cargo.toml
@@ -57,6 +57,7 @@ bytes.workspace = true
 bevy.workspace = true
 
 [dev-dependencies]
+lightyear.workspace = true
 test-log.workspace = true
 
 [lints]
