--- a/examples/launcher/Cargo.toml
+++ b/examples/launcher/Cargo.toml
@@ -1,11 +1,37 @@
 [package]
 name = "launcher"
+version = "0.1.0"
 edition = "2021"
-version = "0.0.1"
-authors = ["RJ <rj@metabrew.com>"]
+license = "MIT OR Apache-2.0"
 publish = false
 
 [dependencies]
+bevy = { workspace = true, default-features = false, features = [
+    "bevy_asset",
+    "bevy_winit",
+    "bevy_render",
+    "bevy_core_pipeline",
+    "bevy_pbr",
+    "x11",
+    "wayland",
+] }
+bevy_egui = { workspace = true }
+lightyear = { path = "../../lightyear", features = [
+    "client", "server", "prediction", "interpolation", "input_native"
+] }
+lightyear_examples_common_new = { path = "../common_new", features = ["client", "server", "gui"] } # Added common
+
+# utils
+rand.workspace = true
+
+# Add dependencies for specific examples, enabling necessary features
+simple_box_new = { path = "../simple_box_new", features = ["client", "server", "gui"] }
+# fps_new = { path = "../fps_new", features = ["client", "server", "gui"] } # Add other examples as needed
+
+clap = { version = "4.5.3", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
+strum = { version = "0.26.2", features = ["derive"] }
+tracing = "0.1.40"
 
 [lints]
 workspace = true
