--- a/examples/launcher/Cargo.toml
+++ b/examples/launcher/Cargo.toml
@@ -23,15 +23,17 @@ lightyear_examples_common_new = { path = "../common_new", features = ["client", 
 
 # utils
 rand.workspace = true
+tracing.workspace = true
+serde.workspace = true
 
 # Add dependencies for specific examples, enabling necessary features
 simple_box_new = { path = "../simple_box_new", features = ["client", "server", "gui"] }
 # fps_new = { path = "../fps_new", features = ["client", "server", "gui"] } # Add other examples as needed
 
 clap = { version = "4.5.3", features = ["derive"] }
-serde = { version = "1.0", features = ["derive"] }
-strum = { version = "0.26.2", features = ["derive"] }
-tracing = "0.1.40"
+strum = { version = "0.27", features = ["derive"] }
+ron = "0.10"
+tempfile = "3.19"
 
 [lints]
 workspace = true
