--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -26,6 +26,7 @@ std = [
   "bytes/std",
   "chacha20poly1305/std",
   "no_std_io2/std",
+  "lightyear_interpolation?/std",
   "lightyear_udp?/std",
   "lightyear_netcode?/std",
   "lightyear_prediction?/std",
