--- a/lightyear_replication/Cargo.toml
+++ b/lightyear_replication/Cargo.toml
@@ -43,6 +43,8 @@ lightyear_messages.workspace = true
 lightyear_transport.workspace = true
 
 # utils
+metrics.workspace = true
+bevy_metrics_dashboard.workspace = true
 crossbeam-channel.workspace = true
 hashbrown.workspace = true
 smallvec.workspace = true
